fix client index spacing. start adding client validations

--- a/app/assets/stylesheets/client.scss
+++ b/app/assets/stylesheets/client.scss
@@ -54,3 +54,15 @@
     }
   }
 }
+
+@include lg-up {
+  .clients-page {
+    .client-code,
+    .client-name,
+    .client-location {
+      width: 25vw;
+      white-space: wrap;
+      overflow: hidden;
+    }
+  }
+}
